--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gooroom-browser (2.2.0-1+grm1u3) stretch; urgency=medium
+
+  * Fix Gooroom Bug Tracking System
+    - 355 : Re-register the whitelist upon trust/untrust judgement module.
+    - 650 : Client redirection URL does not apply Trust/Untrust judgement module.
+    - 697 : Change strings 'chrome&google' to gooroom on gooroom:// pages
+    - 697-6 : Change default ntp (google webstore -> gooroom.kr)
+
+ -- Choi J.S. <junsungc91@gmail.com>  Fri, 31 Fri 2019 10:14:00 +0900
+
 gooroom-browser (2.2.0-1+grm1u2) stretch; urgency=medium
 
   * Fix Gooroom Bug Tracking System
