--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gooroom-browser (2.2.0-1+grm1u4) stretch; urgency=medium
+
+  * Fix Gooroom Bug Tracking System
+    - 507 : Disable 'Open as window' on making shortcut app popup.
+  * Security patch
+    - CVE-2019-5818: Uninitialized value in media reader. Reported by Adrian Tolbaru on
+    - CVE-2019-5819: Incorrect escaping in developer tools. Reported by Svyat Mitin
+
+ -- Choi J.S. <junsungc91@gmail.com>  Wed, 5 Jun 2019 11:36:00 +0900
+
 gooroom-browser (2.2.0-1+grm1u3) stretch; urgency=medium
 
   * Fix Gooroom Bug Tracking System
