--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gooroom-browser (2.2.0-1+grm1u5) stretch; urgency=medium
+
+  * Remove debian/files (build)
+  * Change string 'gooroom web browser' to 'gooroom browser' on desktop
+
+ -- Choi J.S. <junsungc91@gmail.com>  Tue, 25 Jun 2019 10:20:00 +0900
+
 gooroom-browser (2.2.0-1+grm1u4) stretch; urgency=medium
 
   * Fix Gooroom Bug Tracking System
