--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gooroom-browser (2.2.0-1+grm1u6) stretch; urgency=medium
+
+  * Fix Gooroom Bug Tracking System
+    - 884 : hange string chrome to gooroom on error page (URLBlacklist)
+    - 953 : Mojom JS: Fix string serialization
+  * gooroom-security-utils migrated into gooroom-browser
+    - remove gooroom-security-utils on debian/control
+
+ -- Choi J.S. <junsungc91@gmail.com>  Wed, 10 Jul 2019 17:25:00 +0900
+
 gooroom-browser (2.2.0-1+grm1u5) stretch; urgency=medium
 
   * Remove debian/files (build)
