--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gooroom-browser (2.3.0-1+grm1u4) stretch; urgency=medium
+
+  * Security patch
+    - CVE-2019-13720
+  * BugTrackingSystem
+    - 1729 : gooroom-browser (version 76) use gtk3. Remove gtk2 component.
+    - 1769 : Fix [Add shortcut] bug on newtab page.
+
+ -- Choi J.S. <junsungc91@gmail.com>  Tue, 12 Nov 2019 11:01:00 +0900
+
 gooroom-browser (2.3.0-1+grm1u3) stretch; urgency=medium
   
   * Security patch
