--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gooroom-browser (2.3.0-1+grm2u1) stretch; urgency=medium
+
+  * Change Version
+
+ -- Choi J.S. <junsungc91@gmail.com>  Wed, 20 Nov 2019 10:25:00 +0900
+
 gooroom-browser (2.3.0-1+grm1u4) stretch; urgency=medium
 
   * Security patch
