--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gooroom-browser (2.4.0-1+grm2u2) stretch; urgency=medium
+
+  * Apply missing 76 version patches
+
+ -- Choi J.S. <junsungc91@gmail.com>  Mon, 3 Dec 2019 14:42:00 +0900
+
 gooroom-browser (2.4.0-1+grm2u1) stretch; urgency=medium
 
   * Init Gooroom browser 78 version (2.4.0-1+grm2u1)
