--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gooroom-browser (2.4.0-1+grm2u3) stretch; urgency=medium
+
+  * BugTrackingSystem
+    - 1812 : Add korean translation about 'Close Other Tabs'
+    - 1877 : Fixed bug where option doesn't apply if browser's option contains url.
+
+ -- Choi J.S. <junsungc91@gmail.com>  Mon, 20 Jan 2020 11:09:00 +0900
+
 gooroom-browser (2.4.0-1+grm2u2) stretch; urgency=medium
 
   * Apply missing 76 version patches
