--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gooroom-browser (2.5.0-1+grm2u2) stretch; urgency=medium
+
+  * Fix grm version
+  * BugTrackingSystem
+    1970 : Apply adobe flash
+    1976 : Remove [manage security key] on settings page
+
+ -- Choi J.S. <junsungc91@gmail.com>  Thu, 13 Feb 2020 19:20:00 +0900
+
 gooroom-browser (2.5.0-1+grm1u1) stretch; urgency=medium
 
   * Init Gooroom browser 79 version (2.5.0-1+grm1u1)
