--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gooroom-browser (2.5.0-1+grm2u3) stretch; urgency=medium
+
+  * BugTrackingSystem
+    1965 : Rollback 'USB not found' strings on content settings usb page
+    1970 : Apply adobe flash (Revision)
+    1979 : Change scheme chrome:// to gooroom:// on print preview page
+
+ -- Choi J.S. <junsungc91@gmail.com>  Thu, 18 Feb 2020 11:26:00 +0900
+
 gooroom-browser (2.5.0-1+grm2u2) stretch; urgency=medium
 
   * Fix grm version
