--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gooroom-browser (2.5.0-1+grm2u6) stretch; urgency=medium
+
+  * Update vqa extension
+
+ -- Choi J.S. <junsungc91@gmail.com>  Mon, 13 Apr 2020 14:00:00 +0900
+
 gooroom-browser (2.5.0-1+grm2u5) stretch; urgency=medium
 
   * Built-in vqa extension
