--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gooroom-browser (2.5.0-1+grm2u7) stretch; urgency=medium
+
+  * Stabilized vqa extension in gooroom-browser
+
+ -- Choi J.S. <junsungc91@gmail.com>  Wed, 22 Apr 2020 17:42:00 +0900
+
 gooroom-browser (2.5.0-1+grm2u6) stretch; urgency=medium
 
   * Update vqa extension
