--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gooroom-browser (2.6.0-1+grm2u2) stretch; urgency=medium
+
+  * BugTrackingSystem
+    - 2322 : Hide voice search on ntp page
+    - 2323,2324,2353 : Korean translation
+    - 2354 : Fix adobe flash bug
+
+ -- Choi J.S. <junsungc91@gmail.com>  Mon, 15 Jul 2020 16:56:00 +0900
+
 gooroom-browser (2.6.0-1+grm2u1) stretch; urgency=medium
 
   * Init gooroom-browser 2.6.0-1+grm2u1 (rebase 80)
