--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gooroom-browser (2.6.0-1+grm2u4) stretch; urgency=medium
+
+  * BugTrackingSystem
+    - 2392 : Hangul toggle bug fix
+    - 2431 : Hide gooroom browser login on setting page
+
+ -- Choi J.S. <junsungc91@gmail.com>  Mon, 29 Jun 2020 20:38:00 +0900
+
 gooroom-browser (2.6.0-1+grm2u3) stretch; urgency=medium
 
   * BugTrackingSystem
