--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gooroom-browser (2.6.0-1+grm2u6) stretch; urgency=medium
+
+  * BugTrackingSystem
+    - 2397 : Change webrtc thirdparty to fix 'show in folder' bug #2
+
+ -- Choi J.S. <junsungc91@gmail.com>  Wed, 01 Jul 2020 12:09:00 +0900
+
 gooroom-browser (2.6.0-1+grm2u5) stretch; urgency=medium
 
   * BugTrackingSystem
