--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gooroom-browser (2.6.0-1+grm2u7) stretch; urgency=medium
+
+  * BugTrackingSystem
+    - 2397 : Change webrtc thirdparty to fix 'show in folder' bug #3
+
+ -- Choi J.S. <junsungc91@gmail.com>  Thu, 02 Jul 2020 14:35:00 +0900
+
 gooroom-browser (2.6.0-1+grm2u6) stretch; urgency=medium
 
   * BugTrackingSystem
