--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gooroom-browser (2.6.0-1+grm2u8) stretch; urgency=medium
+
+  * BugTrackingSystem
+    - 1973 : Translate [Activate] message on alarm bubble
+
+ -- Choi J.S. <junsungc91@gmail.com>  Mon, 06 Jul 2020 18:08:00 +0900
+
 gooroom-browser (2.6.0-1+grm2u7) stretch; urgency=medium
 
   * BugTrackingSystem
