--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gooroom-browser (2.7.0-1+grm2u2) stretch; urgency=medium
+
+  * BugTrackingSystem
+    - 2506, 2533, 2573, 2585 : A minor misprinted string was changed
+
+ -- Choi J.S. <junsungc91@gmail.com>  Fri, 28 Aug 2020 15:30:00 +0900
+
 gooroom-browser (2.7.0-1+grm2u1) stretch; urgency=medium
 
   * Init Gooroom Browser Version 2.7.0-1+grm2u1
