--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gooroom-browser (2.7.0-1+grm2u3) stretch; urgency=medium
+
+  * Add appointed shortcut function on newtab
+
+ -- Choi J.S. <junsungc91@gmail.com>  Fri, 23 Oct 2020 11:16:00 +0900
+
 gooroom-browser (2.7.0-1+grm2u2) stretch; urgency=medium
 
   * BugTrackingSystem
