--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gooroom-browser (2.7.0-1+grm3u1) stretch; urgency=medium
+
+  * Init gooroom-browser 3.0
+
+ -- Choi J.S. <junsungc91@gmail.com>  Fri, 30 Oct 2020 17:56:00 +0900
+
 gooroom-browser (2.7.0-1+grm2u4) stretch; urgency=medium
 
   * BugTrackingSystem
@@ -40,6 +46,42 @@ gooroom-browser (2.7.0-1+grm2u1) stretch; urgency=medium
   * Init Gooroom Browser Version 2.7.0-1+grm2u1
 
  -- Choi J.S. <junsungc91@gmail.com>  Tue, 29 Jul 2020 11:04:00 +0900
+
+chromium (83.0.4103.116-3.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Add 64-bit time syscalls to syscall whitelist and clock selection
+    parameter filtering code
+  * Switch to explicitly versioned python2
+    + Update build-depends
+    + Replace references to /usr/bin/python and to env python
+      with /usr/bin/python2 and env python2
+    + make exec_script in gn use python2
+    + add code in debian/rules clean to set the shebang in
+      third_party/closure_compiler/compiler.py it seems someting in the upstream
+      build system sometimes resets it.
+
+ -- Peter Michael Green <plugwash@debian.org>  Tue, 15 Sep 2020 13:10:35 +0000
+
+hromium (83.0.4103.116-3) unstable; urgency=high
+
+  * Fix crashes when a connection error occurs (closes: #963548).
+    - Thank you so much to Riku Voipio.
+
+ -- Michael Gilbert <mgilbert@debian.org>  Sat, 11 Jul 2020 14:56:34 +0000
+
+chromium (83.0.4103.116-2) unstable; urgency=medium
+
+  * Fix crashes due to ffmpeg 4.3 (closes: #963035).
+
+ -- Michael Gilbert <mgilbert@debian.org>  Mon, 29 Jun 2020 10:28:15 +0000
+
+chromium (83.0.4103.116-1) unstable; urgency=medium
+
+  * New upstream security release.
+    - CVE-2020-6509: Use after free in extensions. Reported by Anonymous
+
+ -- Michael Gilbert <mgilbert@debian.org>  Mon, 22 Jun 2020 19:45:51 +0000
 
 chromium (83.0.4103.116-1~deb10u3) buster-security; urgency=medium
 
