--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gooroom-browser (2.9.0-1+grm2u2) stretch; urgency=medium
+
+  * Linking gooroom-yelp to the gooroom-browser.
+
+ -- Choi J.S. <junsungc91@gmail.com>  Tue, 01 Jun 2021 16:20:00 +0900
+
 gooroom-browser (2.9.0-1+grm2u1) stretch; urgency=medium
   
   * Init Gooroom Browser Version 2.9.0-1+grm2u1
