--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+gooroom-browser (2.10.0-1+grm2u4) stretch; urgency=medium
+
+  * Security patch
+    - CVE-2021-30521.patch
+    - CVE-2021-30522.patch
+    - CVE-2021-30524.patch
+    - CVE-2021-30527.patch
+    - CVE-2021-30546.patch
+    - CVE-2021-30549.patch
+    - CVE-2021-30550.patch
+    - CVE-2021-30566.patch
+    - CVE-2021-30610.patch
+
+ -- Choi J.S. <junsungc91@gmail.com>  Fri, 24 Sep 2021 11:03:00 +0900
+
 gooroom-browser (2.10.0-1+grm2u3) stretch; urgency=medium
   
   * Bug Fix : 3514 3516 3521
