--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gooroom-browser (3.3.0-1+grm3u1) stretch; urgency=medium
+
+  * Init 3.3.0-1+grm3u1
+    - CVE-2022-1096 : Type Confusion in V8
+
+ -- Choi J.S. <junsungc91@gmail.com>  Mon, 25 Apr 2022 17:22:00 +0900
+
 gooroom-browser (3.2.0-1+grm3u2) stretch; urgency=medium
 
   * Bug Fix
