--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gooroom-browser (3.3.0-1+grm3u2) stretch; urgency=medium
+
+  * Init 3.3.0-1+grm3u2
+    - Disable 'Open as window' on making shortcut app popup
+    - Fix dynamic PageSourceViewEnabled value
+    - Fix trust/untrust changing bug
+    - Revert "pruning extensions pages(chrome://extensions)"
+
+ -- Choi J.S. <junsungc91@gmail.com>  Thu, 16 Jun 2022 17:37:00 +0900
+
 gooroom-browser (3.3.0-1+grm3u1) stretch; urgency=medium
 
   * Init 3.3.0-1+grm3u1
